[package]
name = "glancelog"
version = "1.0.0"
edition = "2021"
authors = ["Vlatko Kosturjak"]
description = "Rapid Log Analysis"
license = "MIT"

[[bin]]
name = "glancelog"
path = "src/bin/glancelog.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
chrono = "0.4"
anyhow = "1.0"
rand = "0.8"
evtx = "0.7"
serde_json = "1.0"
